# ccsfm

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml
.github/workflows/: style.yml  testing.yml
ci/: testkomodo.sh
src/ccsfm/forward_models/: __init__.py  run_cirrus.py
src/ccsfm/hook_implementations/: forward_models.py
tests/: conftest.py  simple_config.ert  test_installation.py
