# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ccsfm"
authors = [
    { name = "CCS Data & Digital Team" },
]
description = "Forward model to run Cirrus in ERT"
readme = "README.md"
requires-python = ">=3.8"
# license = { file = "LICENSE" }

dependencies = ["ert"]
dynamic = ["version"]

[project.entry-points."ert"]
ccsfm_models = "ccsfm.hook_implementations.forward_models"

[project.urls]
repository = "https://github.com/equinor/ccsfm"

[project.optional-dependencies]
dev = ["black", "mypy", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ert_integration: Involves running the ert application explicitly",
]

[tool.ruff]
src = ["src"]
