# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ccsfm"
authors = [
    { name = "CCS Data & Digital Team" },
]
description = "Forward model to run Cirrus in ERT"
readme = "README.md"
requires-python = ">=3.8"
# license = { file = "LICENSE" }

dependencies = ["ert"]
dynamic = ["version"]

[project.entry-points."ert"]
ccsfm_models = "ccsfm.hook_implementations.forward_models"

[project.urls]
repository = "https://github.com/equinor/ccsfm"

[project.optional-dependencies]
dev = ["black", "mypy", "pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]

style = [
    "pre-commit",
]

types = [
    "mypy",
    "types-setuptools",
    "types-PyYAML",
]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
  "W",   # pycodestyle
  "I",   # isort
  "B",   # flake-8-bugbear
  "SIM", # flake-8-simplify
  "F",   # pyflakes
  "C4",  # flake8-comprehensions
  "PL",  # pylint
  "NPY", # numpy specific rules
]

[tool.ruff.lint.pylint]
max-args = 20

